ENH: Update links for the "ASB 2023 Symposium" event

--- a/events/_posts/2023-08-09-asb-2023-symposium.md
+++ b/events/_posts/2023-08-09-asb-2023-symposium.md
@@ -20,11 +20,10 @@ We are developing an extensible, open-source, software program for image-based s
 ## Resources
 
 * [Agenda](#agenda)
-* [SlicerAutoscoperM web page](https://autoscoperm.slicer.org/)
-* Demonstration
+* [Demonstration](#demonstration)
+* [SlicerAutoscoperM website](https://autoscoperm.slicer.org/)
 * [Documentation](https://autoscoperm.slicer.org/documentation/)
-* Get Help
-* Future Meetings
+* [Get Help](https://autoscoper.readthedocs.io/en/latest/get-help.html)
 
 
 ## Agenda
@@ -37,6 +36,11 @@ We are developing an extensible, open-source, software program for image-based s
 | 4:20 PM | Cesar Lopez	             | Research experience acquiring and analyzing dynamic images using BVR and 4DCT in a clinical environment |
 | 4:30 PM | Q&A	                     | |
 | 4:35 PM | Beatriz Paniagua, Ph.D. | 3-D Slicer Image Computing Ecosystem: Integration of SlicerAutoscoperM |
-| 4:40 PM | Anthony Lombardi and Beatriz Paniagua, Ph.D. | SlicerAutoscoperM Demonstration |
+| 4:40 PM | Anthony Lombardi and Beatriz Paniagua, Ph.D. | [SlicerAutoscoperM Demonstration](#demonstration) |
 | 5:00 PM | Open Discussion | |
 | 5:25 PM | Closing Remarks | |
+
+
+# Demonstration
+
+_Coming soon_
