BUG: Fix typo in "ASB 2023 Symposium" event

--- a/events/_posts/2023-08-09-asb-2023-symposium.md
+++ b/events/_posts/2023-08-09-asb-2023-symposium.md
@@ -14,7 +14,7 @@ We are developing an extensible, open-source, software program for image-based s
 * Trey Crisco, PhD Brown University
 * Jillian Beveridge, PhD Brown University
 * Beatriz Paniagua, PhD Kitware
-* Micahel Rainbow, PhD Queen’s University
+* Michael Rainbow, PhD Queen’s University
 * Kristin Zhao,PhD Mayo Clinic
 
 ## Resources
