--- a/events/_posts/2023-08-09-asb-2023-symposium.md
+++ b/events/_posts/2023-08-09-asb-2023-symposium.md
@@ -21,6 +21,7 @@ We are developing an extensible, open-source, software program for image-based s
 
 * [Agenda](#agenda)
 * [Demonstration](#demonstration)
+* [Questionnaire](#questionnaire)
 * [SlicerAutoscoperM website](https://autoscoperm.slicer.org/)
 * [Documentation](https://autoscoperm.slicer.org/documentation/)
 * [Get Help](https://autoscoper.readthedocs.io/en/latest/get-help.html)
@@ -44,3 +45,14 @@ We are developing an extensible, open-source, software program for image-based s
 # Demonstration
 
 _Coming soon_
+
+## Questionnaire
+
+We value your feedback on the SlicerAutoscoperM software. Your insights will aid us in enhancing the
+software's features and user experience. Please take a moment to fill out our [Questionnaire](https://brown.co1.qualtrics.com/jfe/form/SV_3scKMs2bwqMFLPU).
+
+We also hope you will join our development, evaluation, and user community!
+
+| ![ASB 2023 Survey QR Code]({{ "/images/2023-08-09-asb-2023-symposium-questionnaire-qr-code.png" | absolute_url }}) |
+|:--:|
+| [https://brown.co1.qualtrics.com/jfe/form/SV_3scKMs2bwqMFLPU](https://brown.co1.qualtrics.com/jfe/form/SV_3scKMs2bwqMFLPU) |
