ENH: Update Demonstration section of "ASB 2023 Symposium" event

--- a/events/_posts/2023-08-09-asb-2023-symposium.md
+++ b/events/_posts/2023-08-09-asb-2023-symposium.md
@@ -41,10 +41,31 @@ We are developing an extensible, open-source, software program for image-based s
 | 5:00 PM | Open Discussion | |
 | 5:25 PM | Closing Remarks | |
 
+## Demonstration
 
-# Demonstration
+**Join us for a live demonstration!**
 
-_Coming soon_
+Learn how to effectively utilize Slicer and the AutoscoperM extension. The demonstration will cover the following steps:
+
+* [Installing Slicer and AutoscoperM][autoscoperm-install]
+* [Navigating the Slicer User Interface][slicer-user-interface]
+* [Downloading Autoscoper’s Sample Data][autoscoper-download-sampledata]
+* [Launching Autoscoper & Loading Data][autoscoper-launch-and-load-data]
+* [Navigating Autoscoper User Interface][autoscoper-user-interface]
+* [Tracking a Skeletal Structure][autoscoper-tracking]
+* [Evaluating Tracking Results][autoscoper-evaluating-tracking-results]
+* [Loading Dicom Data Into Slicer][slicer-loading-dicom]
+* [Generating Partial Volumes][autoscoperm-generating-partial-volumes]
+
+[autoscoperm-install]: https://autoscoper.readthedocs.io/en/latest/getting-started.html#installing-autoscoperm
+[slicer-user-interface]: https://slicer.readthedocs.io/en/latest/user_guide/user_interface.html
+[autoscoper-download-sampledata]: https://autoscoper.readthedocs.io/en/latest/tutorials/loading-and-tracking.html#downloading-sample-data
+[autoscoper-launch-and-load-data]: https://autoscoper.readthedocs.io/en/latest/tutorials/loading-and-tracking.html#launching-autoscoper-and-loading-sample-data
+[autoscoper-user-interface]: https://autoscoper.readthedocs.io/en/latest/user-interface.html
+[autoscoper-tracking]: https://autoscoper.readthedocs.io/en/latest/tutorials/loading-and-tracking.html#tracking-a-skeletal-structure
+[autoscoper-evaluating-tracking-results]: https://autoscoper.readthedocs.io/en/latest/tutorials/evaluating-tracking-results.html
+[slicer-loading-dicom]: https://slicer.readthedocs.io/en/latest/user_guide/data_loading_and_saving.html
+[autoscoperm-generating-partial-volumes]: https://autoscoper.readthedocs.io/en/latest/tutorials/pre-processing-module.html
 
 ## Questionnaire
 
