--- a/events/_posts/2023-08-09-asb-2023-symposium.md
+++ b/events/_posts/2023-08-09-asb-2023-symposium.md
@@ -22,10 +22,7 @@ We are developing an extensible, open-source, software program for image-based s
 * [Agenda](#agenda)
 * [Demonstration](#demonstration)
 * [Questionnaire](#questionnaire)
-* [SlicerAutoscoperM website](https://autoscoperm.slicer.org/)
-* [Documentation](https://autoscoperm.slicer.org/documentation/)
-* [Get Help](https://autoscoper.readthedocs.io/en/latest/get-help.html)
-
+* [Important Links](#important-links)
 
 ## Agenda
 
@@ -77,3 +74,14 @@ We also hope you will join our development, evaluation, and user community!
 | ![ASB 2023 Survey QR Code]({{ "/images/2023-08-09-asb-2023-symposium-questionnaire-qr-code.png" | absolute_url }}) |
 |:--:|
 | [https://brown.co1.qualtrics.com/jfe/form/SV_3scKMs2bwqMFLPU](https://brown.co1.qualtrics.com/jfe/form/SV_3scKMs2bwqMFLPU) |
+
+## Important Links
+
+* Autoscoper & SlicerAutoscoperM
+  * [Getting Started](https://autoscoper.readthedocs.io/en/latest/getting-started.html)
+  * [Tutorials](https://autoscoper.readthedocs.io/en/latest/tutorials/index.html)
+  * [Get Help](https://autoscoper.readthedocs.io/en/latest/get-help.html)
+  * [Discourse category](https://discourse.slicer.org/c/community/slicerautoscoperm/30) (Slicer forum)
+  * [Homepage](https://autoscoperm.slicer.org/)
+* [Slicer Documentation](https://slicer.readthedocs.io/en/latest/)
+* [Brown Biomechanics GitHub](https://github.com/BrownBiomechanics)
