--- a/events/_posts/2023-08-09-asb-2023-symposium.md
+++ b/events/_posts/2023-08-09-asb-2023-symposium.md
@@ -32,11 +32,11 @@ We are developing an extensible, open-source, software program for image-based s
 | 4:05 PM | Trey Crisco, Ph.D.       | In Vivo Arthrokinematics of the Wrist and Thumb using BVR and Sequential 3D CT Imaging - And The Need for SlicerAutoscoperM |
 | 4:10 PM | Jillian Beveridge, Ph.D. | The Role of Academic Partners in SlicerAutoscoperM Development: Data Sets, Interface Refinement, and Plug-ins |
 | 4:20 PM | Cesar Lopez	             | Research experience acquiring and analyzing dynamic images using BVR and 4DCT in a clinical environment |
-| 4:30 PM | Q&A	                     | |
+| 4:30 PM |                          | Q&A |
 | 4:35 PM | Beatriz Paniagua, Ph.D. | 3-D Slicer Image Computing Ecosystem: Integration of SlicerAutoscoperM |
 | 4:40 PM | Anthony Lombardi and Beatriz Paniagua, Ph.D. | [SlicerAutoscoperM Demonstration](#demonstration) |
-| 5:00 PM | Open Discussion | |
-| 5:25 PM | Closing Remarks | |
+| 5:00 PM | | Open Discussion |
+| 5:25 PM | | Closing Remarks & [Questionnaire](#questionnaire) |
 
 ## Demonstration
 
