ENH: Improve "Goal section of "ASB 2023 Symposium" event adding logo

--- a/events/_posts/2023-08-09-asb-2023-symposium.md
+++ b/events/_posts/2023-08-09-asb-2023-symposium.md
@@ -7,7 +7,13 @@ excerpt: "Introduction to an Open-Source Approach to Bi-Plane Videoradiography a
 
 ## Symposium Goal
 
-We are developing an extensible, open-source, software program for image-based skeletal and implant motion tracking with NIH support that will compute six degree-of-freedom kinematics from videoradiography, 3DCT, or 4DCT image datasets. The goal of this symposium is to share our progress on the development and testing and, importantly, get critical feedback from a wide range of potential users as progress towards the grant aims progresses. This symposium will provide a bridge between basic science, kinesiology, engineering, and clinical domains; it is an educational resource and encourages discussion and collaboration among ASB attendees.
+We are developing an extensible, open-source, software program for image-based skeletal and implant motion tracking with NIH support that will compute six degree-of-freedom kinematics from videoradiography, 3DCT, or 4DCT image datasets.
+
+The goal of this symposium is to share our progress on the development and testing and, importantly, get critical feedback from a wide range of potential users as progress towards the grant aims progresses. This symposium will provide a bridge between basic science, kinesiology, engineering, and clinical domains; it is an educational resource and encourages discussion and collaboration among ASB attendees.
+
+<p align="center">
+  <img src="https://raw.githubusercontent.com/BrownBiomechanics/SlicerAutoscoperM/main/SlicerAutoscoperM.png" alt="SlicerAutoscoperM Logo"/>
+</p>
 
 ## SlicerAutoscoperM Leadership Team
 
