ENH: Ensure Agenda Time column is not wrapped

--- a/events/_posts/2023-08-09-asb-2023-symposium.md
+++ b/events/_posts/2023-08-09-asb-2023-symposium.md
@@ -43,6 +43,7 @@ The goal of this symposium is to share our progress on the development and testi
 | 4:40 PM | Anthony Lombardi and Beatriz Paniagua, Ph.D. | [SlicerAutoscoperM Demonstration](#demonstration) |
 | 5:00 PM | | Open Discussion |
 | 5:25 PM | | Closing Remarks & [Questionnaire](#questionnaire) |
+{: .event-agenda }
 
 ## Demonstration
 
