ENH: Add video of ASB 23 demo

--- a/events/_posts/2023-08-09-asb-2023-symposium.md
+++ b/events/_posts/2023-08-09-asb-2023-symposium.md
@@ -47,7 +47,15 @@ The goal of this symposium is to share our progress on the development and testi
 
 ## Demonstration
 
-**Join us for a live demonstration!**
+
+<video width="100%" height="auto" controls>
+  <source type="video/mp4" src="https://github.com/BrownBiomechanics/Autoscoper/releases/download/docs-resources/ASB23_SA.M_DEMO_BACKUP.mp4">
+</video>
+
+Notes on the demonstration:
+
+* The demonstration was recorded using SlicerAutoscoperM for Slicer 5.3.0-2023-08-09.
+* Some details, specifically related to the pre-processing module, are subject to change. Changes will be reflected in the [documentation](https://autoscoper.readthedocs.io/en/latest/).
 
 Learn how to effectively utilize Slicer and the AutoscoperM extension. The demonstration will cover the following steps:
 
