BUG: Relative path ymd

--- a/events/_posts/2025-08-13-asb-2025-workshop.md
+++ b/events/_posts/2025-08-13-asb-2025-workshop.md
@@ -8,10 +8,10 @@ excerpt: "Rigid body registration and kinematic calculations in dynamic radiogra
 ## Join Us at [ASB 2025](https://asbweb.org/workshops/), August 13th 9:00am - 11:00am
 
 <div class="list-group">
-  <a class="list-group-item" href="../../pdfs/ASB2025_AMM.pdf"><i class="fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp; 3DSlicer and SAM</a>
-  <a class="list-group-item" href="../../pdfs/ASB2025_JH.pptx.pdf"><i class="fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp; BVR Workflow</a>
-  <a class="list-group-item" href="../../pdfs/ASB2025_CL.pdf"><i class="fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp; 4DCT Processing</a>
-  <a class="list-group-item" href="../..//pdfs/ASB2025_JV.pdf"><i class="fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp; Benefits of SAM 3DH</a>
+  <a class="list-group-item" href="../../../pdfs/ASB2025_AMM.pdf"><i class="fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp; 3DSlicer and SAM</a>
+  <a class="list-group-item" href="../../../pdfs/ASB2025_JH.pptx.pdf"><i class="fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp; BVR Workflow</a>
+  <a class="list-group-item" href="../../../pdfs/ASB2025_CL.pdf"><i class="fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp; 4DCT Processing</a>
+  <a class="list-group-item" href="../../../pdfs/ASB2025_JV.pdf"><i class="fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp; Benefits of SAM 3DH</a>
 </div>
 
 Image-based object tracking performed with biplane videoradiography (BVR) is the state-of-the-art for accurate quantification of in vivo skeletal kinematics. BVR involves the frame-by-frame registration of three- dimensional (3D) rigid body volumes (e.g. bones and implants) to videoradiographs. 
