DOC: Add Trey's slides

--- a/events/_posts/2025-08-13-asb-2025-workshop.md
+++ b/events/_posts/2025-08-13-asb-2025-workshop.md
@@ -8,6 +8,7 @@ excerpt: "Rigid body registration and kinematic calculations in dynamic radiogra
 ## Join Us at [ASB 2025](https://asbweb.org/workshops/), August 13th 9:00am - 11:00am
 
 <div class="list-group">
+  <a class="list-group-item" href="../../../pdfs/ASB2025_IntroComp.pdf"><i class="fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp;Intro and Competition!</a>
   <a class="list-group-item" href="../../../pdfs/ASB2025_AMM.pdf"><i class="fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp; 3DSlicer and SAM</a>
   <a class="list-group-item" href="../../../pdfs/ASB2025_JH.pptx.pdf"><i class="fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp; BVR Workflow</a>
   <a class="list-group-item" href="../../../pdfs/ASB2025_CL.pdf"><i class="fa-file-pdf fa-fw" aria-hidden="true"></i>&nbsp; 4DCT Processing</a>
